[gd_scene load_steps=18 format=3 uid="uid://joqtl8sv8llp"]

[ext_resource type="Script" path="res://Scripts/beam_potion.gd" id="1_fi8uc"]
[ext_resource type="AudioStream" uid="uid://dby3ad4nw35lq" path="res://assets/sfx/potion_gun_fire.wav" id="2_bs554"]
[ext_resource type="AudioStream" uid="uid://16mgtq65yo1k" path="res://assets/sfx/glass_shatter.wav" id="3_de7hj"]
[ext_resource type="AudioStream" uid="uid://cqxt4prfckrq5" path="res://assets/sfx/beam.wav" id="4_1aw51"]
[ext_resource type="PackedScene" uid="uid://2001ag8ifk86" path="res://Scenes/player/model_imports/PotionBeam.glb" id="5_p85sr"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gmyqd"]
albedo_color = Color(0.266667, 0, 1, 1)

[sub_resource type="SphereMesh" id="SphereMesh_buc32"]
material = SubResource("StandardMaterial3D_gmyqd")

[sub_resource type="SphereShape3D" id="SphereShape3D_r3afw"]

[sub_resource type="BoxShape3D" id="BoxShape3D_enyxo"]
size = Vector3(3, 0.5, 101.407)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_os4ht"]
transparency = 1
albedo_color = Color(0.878431, 0, 0.878431, 0.839216)
emission_enabled = true
emission = Color(1, 0.337255, 1, 1)
emission_energy_multiplier = 3.08

[sub_resource type="BoxMesh" id="BoxMesh_njw1n"]
material = SubResource("StandardMaterial3D_os4ht")
size = Vector3(3, 0.5, 101.407)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_8u83o"]
emission_shape_scale = Vector3(1, 1, 24.6)
emission_shape = 3
emission_box_extents = Vector3(1, 1, 1)
direction = Vector3(0.325, 1, -4.905)
flatness = 0.528
gravity = Vector3(0, 11.69, 0)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_y6esf"]
albedo_color = Color(1, 0.0527989, 0.987347, 1)

[sub_resource type="SphereMesh" id="SphereMesh_jxxct"]
material = SubResource("StandardMaterial3D_y6esf")
radius = 1.69
height = 1.66
radial_segments = 4
rings = 1

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_ah6qe"]
lifetime_randomness = 0.9
emission_shape_scale = Vector3(0.2, 0, 0.2)
emission_shape = 1
emission_sphere_radius = 1.0
spread = 112.457
gravity = Vector3(0, 0.52, 0)
attractor_interaction_enabled = false

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_od3h1"]
albedo_color = Color(0.678256, 7.80681e-05, 0.564057, 1)

[sub_resource type="SphereMesh" id="SphereMesh_p3nkw"]
material = SubResource("StandardMaterial3D_od3h1")
radius = 0.016
height = 0.031
radial_segments = 4
rings = 2

[node name="beam_potion" type="RigidBody3D"]
gravity_scale = 5.004
max_contacts_reported = 1
contact_monitor = true
script = ExtResource("1_fi8uc")

[node name="beam_potion_mesh" type="MeshInstance3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
visible = false
mesh = SubResource("SphereMesh_buc32")
skeleton = NodePath("")

[node name="beam_potion_collision" type="CollisionShape3D" parent="."]
transform = Transform3D(0.3, 0, 0, 0, 0.3, 0, 0, 0, 0.3, 0, 0, 0)
shape = SubResource("SphereShape3D_r3afw")

[node name="beam_potion_aoe" type="Area3D" parent="."]
transform = Transform3D(2.5, 0, 0, 0, 2.5, 0, 0, 0, 2.5, 0, 0, 0.299099)
collision_layer = 4
collision_mask = 3
monitorable = false

[node name="beam_potion_aoe_collider" type="CollisionShape3D" parent="beam_potion_aoe"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50.698)
shape = SubResource("BoxShape3D_enyxo")

[node name="beam_potion_aoe_visual" type="MeshInstance3D" parent="beam_potion_aoe"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 50.698)
mesh = SubResource("BoxMesh_njw1n")

[node name="GPUParticles3D" type="GPUParticles3D" parent="beam_potion_aoe/beam_potion_aoe_visual"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0746429, 0, -27.4601)
amount = 18
lifetime = 0.01
explosiveness = 0.83
visibility_aabb = AABB(-1.55297, -0.541022, -1.58106, 3.10595, 1.08204, 3.16252)
process_material = SubResource("ParticleProcessMaterial_8u83o")
draw_pass_1 = SubResource("SphereMesh_jxxct")

[node name="potion_gun_fire" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("2_bs554")
volume_db = -15.0

[node name="glass_shatter" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_de7hj")
volume_db = -10.0
max_db = -10.0

[node name="beam" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("4_1aw51")
max_db = 0.0

[node name="potion_particles" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.207323, 0.322992)
amount = 63
randomness = 1.0
trail_lifetime = 0.06
process_material = SubResource("ParticleProcessMaterial_ah6qe")
draw_pass_1 = SubResource("SphereMesh_p3nkw")

[node name="PotionBeam" parent="." instance=ExtResource("5_p85sr")]
transform = Transform3D(0.744817, -0.0156726, -0.00522139, 0.00232069, 0.332409, -0.666726, 0.0163557, 0.666546, 0.332376, -0.004, 0.05, 0.023)
